example/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pbr
  labels:
    app.kubernetes.io/name: pbr
spec:
  containers:
    - name: pbr
      image: ghcr.io/greatliontech/pbr:v0.2.8
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
      resources:
        limits:
          squat.ai/fuse: 1
      securityContext:
        capabilities:
          add: ["SYS_ADMIN"]
  volumes:
    - name: config
      configMap:
        name: pbr-config
        items:
          - key: "config.yaml"
            path: "config.yaml"
