example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pbr
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pbr
